add sum benchmark